[package]
name = "pg_proxy"
version = "0.1.0"
authors = ["Yale Cason <yale.cason@gmail.com>"]

[dependencies]
log = "0.3"
env_logger = "0.3"
dotenv = "*"
byteorder = "0.5"
postgres-protocol = "0.1"
futures = "0.1"
tokio-core = "0.1.1"
# tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }